fix(gds-card): remove align-items
remove align-items which didnt allow for left and right alignment of card content, use
--card-text-align instead

--- a/src/components/gds-card/_index.scss
+++ b/src/components/gds-card/_index.scss
@@ -1,9 +1,8 @@
 @mixin card {
   box-sizing: border-box;
   display: flex;
-  align-items: center;
   justify-content: flex-start;
-  text-align: var(--card-text-align);
+  text-align: var(--card-text-align, center);
   border: var(--card-border);
   border-radius: var(--card-border-radius, 8px);
   background-color: var(--card-background-color, white);
